donate section completed

--- a/index.html
+++ b/index.html
@@ -129,19 +129,48 @@
         <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability.<br> With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
     </div>
     <div class="donate-amount">
-        <div class="amount-card1">
+        <div class="amount-card1 amount-card">
             <h3>100 Taka</h3>
         </div>
+
+        <div class="amount-card2 amount-card">
+            <h3>200 Taka</h3>
+        </div>  
+
+
+        <div class="amount-card3 amount-card">
+            <h3>500 Taka</h3>
+        </div>
+
+        <div class="amount-card4 amount-card">
+            <h3>1000 Taka</h3>
+        </div>
+
     </div>
-    <div class="donate-button"></div>
+    <div class="donate-button">
+        <input type="text" name="amount" id="" placeholder="Other Amount (Taka)" class="input-amnt">
+
+        <button class="donate-btn">Donate Now</button>
+    </div>
  </section>
-
-
-
 
 </main>
 
-
+<footer>
+    <section class="site-footer section-width center fira-sans ">
+        <div class="newsletter">
+            <h2 class="newsletter-title text-center">Subscribe Newsletter</h2>
+            <p class="newsletter-sub-title">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.</p>
+            <div class="newsletter-form">
+                <form action="">
+                    <input type="text" name="" id="">
+                    <input type="submit" value="Subscribe">
+                </form>
+            </div>
+        </div>
+        <div class="social-icon"></div>
+    </section>
+</footer>
 
 
 
