all primary section completed succesfully

--- a/index.html
+++ b/index.html
@@ -162,14 +162,32 @@
             <h2 class="newsletter-title text-center">Subscribe Newsletter</h2>
             <p class="newsletter-sub-title">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.</p>
             <div class="newsletter-form">
+                
                 <form action="">
-                    <input type="text" name="" id="">
-                    <input type="submit" value="Subscribe">
+                    <input type="email" name="" id="" placeholder="Enter your email here" class="subscribe-field">
+                    
+                </form>
+                <form action="">
+                    <input type="submit" value="Subscribe" class="subscribe-btn">
                 </form>
             </div>
+            <p class="form-sub-title">We promise not to spam you!</p>
         </div>
-        <div class="social-icon"></div>
     </section>
+
+
+<section class="social-icon section-width center">
+        <div class="icon-item">
+            <img src="assets/facebook.png" alt="">
+            <img src="assets/instagram.png" alt="">
+            <img src="assets/x.png" alt="">
+        </div>
+</section>
+
+
+
+
+
 </footer>
 
 
