optional section pilar of bangladesh2.0 completed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,44 @@
         </div>
     </section>
 
-    <!-- Optional section will be done later if possible -->
+    <!-- Optional section vision of bangladesh start here  -->
+
+<section class="pilar-of-bd section-width center fira-sans">
+    <div class="pilar-of-bd-title"><h3>Pillars of "Bangladesh 2.0"</h3></div>
+    
+    <div class="pilar-of-bd-content">
+        <div class="pilar-of-bd-card">
+            <img src="assets/card-icon.png" alt="">
+            <h4>Innovation</h4>
+            <p>Innovation for good governance: The Estonian example One of the most powerful tools that corporations can bring to bear in the rebuilding of Bangladesh is technology.</p>
+        </div>
+
+        <div class="pilar-of-bd-card">
+            <img src="assets/card-icon.png" alt="">
+            <h4>Sustainability</h4>
+            <p>Bangladesh 2.0 encompasses various strategic initiatives, from economic overhauls and infrastructural advancements to social reforms and environmental sustainability.</p>
+        </div>
+
+
+        <div class="pilar-of-bd-card">
+            <img src="assets/card-icon.png" alt="">
+            <h4>Infrastructure</h4>
+            <p>With Bangladesh on track to graduate from the UN's Least Developed Countries list in 2026, new infrastructure is helping open up the country's domestic and international trade.</p>
+        </div>
+
+
+
+        <div class="pilar-of-bd-card">
+            <img src="assets/card-icon.png" alt="">
+            <h4>Empowerment</h4>
+            <p>Empowering Bangladesh:A Bold National Development Plan for Sustainable Progress.Bangladesh, a nation rich in both people and challenges,to provide sustainable employment opportunities for its youth.</p>
+        </div>
+
+
+    </div>
+</section>
+
+
 
 <!-- Vision of fututre start here  -->
 <section class="vision-of-future section-width center fira-sans">
